<resources>
    <string name="app_name">FoodIST</string>


    <string name="sign_in">Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="password">Password</string>
    <string name="register">Create "\n" Account</string>
    <string name="AnonRegister">Enter as"\n" Guest</string>

    <string name="nav_header_title">Anon User</string>
    <string name="nav_header_subtitle">no.email@tecnico.ulisboa.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>

    <string name="title_activity_main__menu_">Main_Menu_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="Google_Maps_API">AIzaSyBKj_1qFGu2CzxY18nYR-Zb-rxU-Xjhv2Y</string>

    <string name="intent_user_list">intent_user_list</string>
    <string name="fragment_user_list">User List</string>

    <string name="campus">Campus</string>
    <string name="edit">Edit Profile</string>
    <string name="name">Person Name</string>
    <string name="context">Context</string>
    <string name="menu">Menu</string>


    <string name="serviceButton">WiFi On</string>
    <string name="cancelButton">WiFi Off</string>
    <string name="inRangeButton">In Range</string>



</resources>
